# cuty-server

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  database.db  docker-compose.yml
migrations/2022-12-31-195547_create_links/: up.sql
src/: cors.rs  link.rs  main.rs  schema.rs
templates/: 404.html.hbs  index.html.hbs  landingPage.html.hbs
