[package]
name = "cuty-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2" , features = ["json"] }
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
dotenvy = "0.15"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_sqlite_pool"]
